# bounty-hive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_FREEZE.md  CORE_STABILITY_NOTE.md  Dockerfile  LICENSE  MANIFEST.sha256  Makefile  PLATFORM_INVARIANTS.md  README.md  SECURITY.md  findings.py  mypy.ini  policy_overrides.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.sh
.github/workflows/: ci.yml
bounty_hive/: __init__.py  ai_analysis.py  audit_bundle.py  audit_chain.py  audit_hash_chaining.py  audit_log.py  audit_store.py  audit_utils.py  audit_verify.py  auth.py  cache.py  cli.py  diffing.py  evidence.py  exports.py  fetch.py  findings.py  gui_app.py  llm.py  models.py  normalize.py  orchestrator.py  overrides.py  parse_common.py  passive_tools.py  pdf_export.py  receipts.py  reporting.py  runner.py  safety.py  schema.py  sealed_findings.py
bounty_hive/adapters/: base.py  generic.py
bounty_hive/intake/: engine.py
bounty_hive/reporting/: hash_utils.py  sarif.py  writer.py
bounty_hive/store/: client.py
docs/: EVIDENCE_INDEX.md  LEGAL_POSTURE.md  SECURITY_MODEL.md  STORECLIENT_GUARANTEES.md  THREAT_MODEL.md  TRUST_CONTRACT.md  WHAT_THIS_TOOL_WILL_NEVER_DO.md
store/: client.py
tests/: reporting_core.py  test_audit_chain.py  test_audit_verify.py  test_engine_intake.py  test_no_root_store_directory.py  test_policy_snapshot.py  test_rbac.py  test_receipts.py  test_sarif_export.py  test_schema_version.py  test_store_client_purity.py
tools/: repair.sh  update.sh
(+3 files in other folders)
