[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bounty-hive"
version = "3.1.0+enterprise"
description = "Enterprise-grade, passive-only bug bounty policy normalizer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary / Internal" }
authors = [{ name = "Security Engineering" }]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "rich>=13.7.0",
  "reportlab>=4.0.0",
  "cryptography>=43.0.0",
]

[project.scripts]
bounty-hive = "bounty_hive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bounty_hive*"]

[tool.pytest.ini_options]
pythonpath = ["."]
